--- a/docs/tufte-md/pandoc.css
+++ b/docs/tufte-md/pandoc.css
@@ -1,4 +1,7 @@
 
+/* For smart quotes */
+q { quotes: "“" "”" "‘" "’"; }
+
 /* Override section behavior.
  * We only want the top-level <section> to have padding.
  * This makes it easier to work with --section-divs. */
