--- a/docs/tufte-md/tufte.css
+++ b/docs/tufte-md/tufte.css
@@ -1,7 +1,7 @@
+@charset "UTF-8";
+
 /* Import ET Book styles
    adapted from https://github.com/edwardtufte/et-book/blob/gh-pages/et-book.css */
-
-@charset "UTF-8";
 
 @font-face { font-family: "et-book";
              src: url("et-book/et-book-roman-line-figures/et-book-roman-line-figures.eot");
@@ -59,6 +59,14 @@ h3 { font-style: italic;
      margin-top: 2rem;
      margin-bottom: 0;
      line-height: 1; }
+
+hr { display: block;
+     height: 1px;
+     width: 55%;
+     border: 0;
+     border-top: 1px solid #ccc;
+     margin: 1em 0;
+     padding: 0; }
 
 p.subtitle { font-style: italic;
              margin-top: 1rem;
