--- a/docs/pandoc.css
+++ b/docs/pandoc.css
@@ -58,6 +58,17 @@ pre:not(.sourceCode) {
   overflow-x: auto;
 }
 
+/* But if there are line numbers, the inner pre *doesn't* get a .sourceCode
+ * class, so we want to reset it to the full width of the table container. */
+td.sourceCode pre {
+  width: initial;
+}
+/* We don't want the line numbers to overflow; rather, we want the table to
+ * reflow to have enough room to show everthing without scrolling. */
+td.lineNumbers pre {
+  overflow-x: initial;
+}
+
 div.sourceCode code,
 pre:not(.sourceCode) code {
   font-size: 0.9rem;
