--- a/docs/tufte.css
+++ b/docs/tufte.css
@@ -9,6 +9,7 @@
     src: url("et-book/et-book-roman-line-figures/et-book-roman-line-figures.eot?#iefix") format("embedded-opentype"), url("et-book/et-book-roman-line-figures/et-book-roman-line-figures.woff") format("woff"), url("et-book/et-book-roman-line-figures/et-book-roman-line-figures.ttf") format("truetype"), url("et-book/et-book-roman-line-figures/et-book-roman-line-figures.svg#etbookromanosf") format("svg");
     font-weight: normal;
     font-style: normal;
+    font-display: swap;
 }
 
 @font-face {
@@ -17,6 +18,7 @@
     src: url("et-book/et-book-display-italic-old-style-figures/et-book-display-italic-old-style-figures.eot?#iefix") format("embedded-opentype"), url("et-book/et-book-display-italic-old-style-figures/et-book-display-italic-old-style-figures.woff") format("woff"), url("et-book/et-book-display-italic-old-style-figures/et-book-display-italic-old-style-figures.ttf") format("truetype"), url("et-book/et-book-display-italic-old-style-figures/et-book-display-italic-old-style-figures.svg#etbookromanosf") format("svg");
     font-weight: normal;
     font-style: italic;
+    font-display: swap;
 }
 
 @font-face {
@@ -25,6 +27,7 @@
     src: url("et-book/et-book-bold-line-figures/et-book-bold-line-figures.eot?#iefix") format("embedded-opentype"), url("et-book/et-book-bold-line-figures/et-book-bold-line-figures.woff") format("woff"), url("et-book/et-book-bold-line-figures/et-book-bold-line-figures.ttf") format("truetype"), url("et-book/et-book-bold-line-figures/et-book-bold-line-figures.svg#etbookromanosf") format("svg");
     font-weight: bold;
     font-style: normal;
+    font-display: swap;
 }
 
 @font-face {
@@ -33,6 +36,7 @@
     src: url("et-book/et-book-roman-old-style-figures/et-book-roman-old-style-figures.eot?#iefix") format("embedded-opentype"), url("et-book/et-book-roman-old-style-figures/et-book-roman-old-style-figures.woff") format("woff"), url("et-book/et-book-roman-old-style-figures/et-book-roman-old-style-figures.ttf") format("truetype"), url("et-book/et-book-roman-old-style-figures/et-book-roman-old-style-figures.svg#etbookromanosf") format("svg");
     font-weight: normal;
     font-style: normal;
+    font-display: swap;
 }
 
 /* Tufte CSS styles */
@@ -106,7 +110,6 @@ p.subtitle {
 }
 
 article {
-    position: relative;
     padding: 5rem 0rem;
 }
 
@@ -116,6 +119,7 @@ section {
 }
 
 p,
+dl,
 ol,
 ul {
     font-size: 1.4rem;
@@ -175,12 +179,14 @@ section > table {
 }
 
 /* 50 + 5 == 55, to be the same width as paragraph */
+section > dl,
 section > ol,
 section > ul {
     width: 50%;
     -webkit-padding-start: 5%;
 }
 
+dt:not(:first-child),
 li:not(:first-child) {
     margin-top: 0.25rem;
 }
@@ -219,10 +225,15 @@ a:visited {
     color: inherit;
 }
 
-a:link {
+.no-tufte-underline:link {
+    background: unset;
+    text-shadow: unset;
+}
+
+a:link, .tufte-underline, .hover-tufte-underline:hover {
     text-decoration: none;
-    background: -webkit-linear-gradient(#fffff8, #fffff8), -webkit-linear-gradient(#fffff8, #fffff8), -webkit-linear-gradient(#333, #333);
-    background: linear-gradient(#fffff8, #fffff8), linear-gradient(#fffff8, #fffff8), linear-gradient(#333, #333);
+    background: -webkit-linear-gradient(#fffff8, #fffff8), -webkit-linear-gradient(#fffff8, #fffff8), -webkit-linear-gradient(currentColor, currentColor);
+    background: linear-gradient(#fffff8, #fffff8), linear-gradient(#fffff8, #fffff8), linear-gradient(currentColor, currentColor);
     -webkit-background-size: 0.05em 1px, 0.05em 1px, 1px 1px;
     -moz-background-size: 0.05em 1px, 0.05em 1px, 1px 1px;
     background-size: 0.05em 1px, 0.05em 1px, 1px 1px;
@@ -232,16 +243,12 @@ a:link {
 }
 
 @media screen and (-webkit-min-device-pixel-ratio: 0) {
-    a:link {
+    a:link, .tufte-underline, .hover-tufte-underline:hover {
         background-position-y: 87%, 87%, 87%;
     }
 }
 
-a:link::selection {
-    text-shadow: 0.03em 0 #b4d5fe, -0.03em 0 #b4d5fe, 0 0.03em #b4d5fe, 0 -0.03em #b4d5fe, 0.06em 0 #b4d5fe, -0.06em 0 #b4d5fe, 0.09em 0 #b4d5fe, -0.09em 0 #b4d5fe, 0.12em 0 #b4d5fe, -0.12em 0 #b4d5fe, 0.15em 0 #b4d5fe, -0.15em 0 #b4d5fe;
-    background: #b4d5fe;
-}
-
+a:link::selection,
 a:link::-moz-selection {
     text-shadow: 0.03em 0 #b4d5fe, -0.03em 0 #b4d5fe, 0 0.03em #b4d5fe, 0 -0.03em #b4d5fe, 0.06em 0 #b4d5fe, -0.06em 0 #b4d5fe, 0.09em 0 #b4d5fe, -0.09em 0 #b4d5fe, 0.12em 0 #b4d5fe, -0.12em 0 #b4d5fe, 0.15em 0 #b4d5fe, -0.15em 0 #b4d5fe;
     background: #b4d5fe;
@@ -258,7 +265,7 @@ img {
     clear: right;
     margin-right: -60%;
     width: 50%;
-    margin-top: 0;
+    margin-top: 0.3rem;
     margin-bottom: 0;
     font-size: 1.1rem;
     line-height: 1.3;
@@ -309,13 +316,14 @@ div.table-wrapper {
 
 .sans {
     font-family: "Gill Sans", "Gill Sans MT", Calibri, sans-serif;
-    letter-spacing: 0.03em;
+    letter-spacing: .03em;
 }
 
-code {
+code, pre > code {
     font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
-    font-size: 1rem;
+    font-size: 1.0rem;
     line-height: 1.42;
+    -webkit-text-size-adjust: 100%; /* Prevent adjustments of font size after orientation changes in iOS. See https://github.com/edwardtufte/tufte-css/issues/81#issuecomment-261953409 */
 }
 
 .sans > code {
@@ -325,7 +333,7 @@ code {
 h1 > code,
 h2 > code,
 h3 > code {
-    font-size: 0.8em;
+    font-size: 0.80em;
 }
 
 .marginnote > code,
@@ -333,20 +341,21 @@ h3 > code {
     font-size: 1rem;
 }
 
-pre.code {
+pre > code {
     font-size: 0.9rem;
     width: 52.5%;
     margin-left: 2.5%;
     overflow-x: auto;
+    display: block;
 }
 
-pre.code.fullwidth {
+pre.fullwidth > code {
     width: 90%;
 }
 
 .fullwidth {
     max-width: 90%;
-    clear: both;
+    clear:both;
 }
 
 span.newthought {
@@ -387,44 +396,53 @@ label.margin-toggle:not(.sidenote-number) {
         padding-left: 8%;
         padding-right: 8%;
     }
+
     hr,
     section > p,
     section > footer,
     section > table {
         width: 100%;
     }
-    pre.code {
+
+    pre > code {
         width: 97%;
     }
-    section > ol {
-        width: 90%;
-    }
+
+    section > dl,
+    section > ol,
     section > ul {
         width: 90%;
     }
+
     figure {
         max-width: 90%;
     }
+
     figcaption,
     figure.fullwidth figcaption {
         margin-right: 0%;
         max-width: none;
     }
+
     blockquote {
         margin-left: 1.5em;
         margin-right: 0em;
     }
+
     blockquote p,
     blockquote footer {
         width: 100%;
     }
+
     label.margin-toggle:not(.sidenote-number) {
         display: inline;
     }
+
     .sidenote,
     .marginnote {
         display: none;
     }
+
     .margin-toggle:checked + .sidenote,
     .margin-toggle:checked + .marginnote {
         display: block;
@@ -436,13 +454,16 @@ label.margin-toggle:not(.sidenote-number) {
         vertical-align: baseline;
         position: relative;
     }
+
     label {
         cursor: pointer;
     }
+
     div.table-wrapper,
     table {
         width: 85%;
     }
+
     img {
         width: 100%;
     }
