--- a/docs/pandoc.css
+++ b/docs/pandoc.css
@@ -74,3 +74,14 @@ pre:not(.sourceCode) code {
     width: 100%;
   }
 }
+
+/* Math formatting */
+.katex {
+  font-size: inherit !important;
+}
+
+/* Wrap long URLs in references */
+#refs a {
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+}
