--- a/tufte-extra.css
+++ b/tufte-extra.css
@@ -1,2 +1,9 @@
 /* The default x-height for code is slightly too large in side notes */
-.marginnote code, .sidenote code { font-size: 0.9rem; }
+.marginnote code, .sidenote code {
+    font-size: 0.9rem;
+}
+
+/* ... and slightly too small in body text */
+code {
+    font-size: 1.05rem;
+}
