--- a/docs/tufte-extra.css
+++ b/docs/tufte-extra.css
@@ -1,2 +1,19 @@
 /* The default x-height for code is slightly too large in side notes */
-.marginnote code, .sidenote code { font-size: 0.9rem; }
+.marginnote code, .sidenote code {
+    font-size: 0.9rem;
+}
+
+/* ... and slightly too small in body text */
+code {
+    font-size: 1.05rem;
+}
+
+/* Also make the sidenote numbers hang */
+.sidenote {
+    text-indent: -0.4rem;
+}
+.sidenote:before {
+    /* removes trailing space from the counter content */
+    content: counter(sidenote-counter);
+    left: -0.4rem;
+}
