--- a/docs/tufte-extra.css
+++ b/docs/tufte-extra.css
@@ -23,3 +23,64 @@ code {
 li:not(:first-child) {
     margin-top: initial;
 }
+
+/* To get the pandoc-generated bibliography to match style, define csl classes. */
+div.csl-bib-body {
+    width: 55%;
+}
+div.csl-entry {
+    clear: both;
+    margin-top: .5rem;
+}
+.hanging div.csl-entry {
+    margin-left: 2rem;
+    text-indent: -2rem;
+}
+div.csl-left-margin {
+    min-width: 2rem;
+    float: left;
+}
+div.csl-right-inline {
+    margin-left: 2rem;
+    padding-left: 1rem;
+}
+div.csl-indent {
+    margin-left: 2rem;
+}
+div.hanging-indent{
+    margin-left: 1.5rem;
+    text-indent: -1.5rem;
+}
+
+@media (max-width: 760px) {
+    div.csl-bib-body {
+        width: 100%;
+    }
+}
+
+/* Prevent superscripts and subscripts from affecting line-height */
+sup, sub {
+    vertical-align: baseline;
+    position: relative;
+    top: -0.4em;
+}
+sub { 
+    top: 0.4em; 
+}
+
+/* Replicate styling from sidenote numbers to footnote numbers */
+a.footnote-ref {
+    background: unset;
+    text-shadow: unset;
+    font-size: 1rem;
+    position: relative;
+    top: -0.1rem;
+    left: 0.1rem;
+    display: inline;
+}
+.footnote-ref sup {
+    font-family: et-book-roman-old-style;
+    font-size: inherit;
+    vertical-align: inherit;
+    line-height: inherit;
+}
