--- a/pandoc.css
+++ b/pandoc.css
@@ -99,3 +99,38 @@ pre:not(.sourceCode) {
   word-wrap: break-word;
   overflow-wrap: break-word;
 }
+
+/* To get the pandoc-generated bibliography to match style, define csl classes. */
+div.csl-bib-body {
+  width: 55%;
+}
+div.csl-entry {
+  clear: both;
+  margin-top: .5rem;
+}
+.hanging div.csl-entry {
+  margin-left: 2rem;
+  text-indent: -2rem;
+}
+div.csl-left-margin {
+  min-width: 2rem;
+  float: left;
+}
+div.csl-right-inline {
+  margin-left: 2rem;
+  padding-left: 1rem;
+}
+div.csl-indent {
+  margin-left: 2rem;
+}
+div.hanging-indent{
+  margin-left: 1.5rem;
+  text-indent: -1.5rem;
+}
+
+@media (max-width: 760px) {
+  div.csl-bib-body {
+    width: 100%;
+  }
+}
+
